<resources>
    <string name="app_name">Gestion de Presence et Cotisation</string>
    <string name="logo">Presence Et Cotisation</string>
    <string name="getstarted">Pour Commencer</string>
    <string name="info_id">Juste besoin de votre identite.</string>
    <string name="info">Garder le nom d\'utilisateur et le mot de passe.</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="pwd"> Mot de passe</string>
    <string name="cfpwd">Confirmer mot de passe</string>
    <string name="valider">Valider</string>
    <string name="groupename">Nom de l\'association</string>
    <string name="login">Log In</string>
    <string name="loginuser">Nom d\'utilisateur</string>
    <string name="loginpwd"> Mot de passe</string>
    <string name="motdepasseoublie">Mot de passe oublie?</string>
    <string name="title_activity_slide">SlideActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="other">Other</string>
    <string name="joke">Jokes</string>
    <string name="about_us">About Us</string>
    <string name="les_membres">Les Membres</string>
    <string name="les_cotisations">Enregistrer Les cotisations</string>
    <string name="details_de_cotisation">Details de Cotisations</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="_200_membres">200 membres</string>
    <string name="title_activity_member_details">MemberDetailsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="quit">Quit</string>
    <string name="edit">Edit</string>
    <string name="transition_name_name">transition:NAME</string>
    <string name="transition_name_firstname">transition:FIRSTNAME</string>
    <string name="transition_name_phone">transition:PHONE</string>
    <string name="transition_name_mail">transition:MAIL</string>
    <string name="transition_name_add">transition:ADD</string>
    <string name="transition_name_profession">transition:PROFESSION</string>
    <string name="transition_name_matri">transition:MATRI</string>
    <string name="transition_name_dateannif">transition:DATEANNIF</string>
    <string name="transition_name_circle">transition:CIRCLE</string>

    <string name="mariejulio">MARIEJulio</string>
    <string name="tr">tr</string>
    <string name="title_activity_edit_add">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="nom_du_membre">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="enregistrer_un_membre">Enregistrer un membre</string>
    <string name="numero_de_telephone">Numero de Telephone</string>
    <string name="adresse">Adresse</string>
    <string name="profession">Profession</string>
    <string name="date_d_anniversaire">Date d\'anniversaire</string>
    <string name="situation_matrimoniale">Situation Matrimoniale</string>
    <string name="email">Email</string>
    <string name="ouvrir_la_cam">Camera</string>
    <string name="prendre_une_photo">Prendre une photo</string>
    <string name="successadd">Ajout effectue</string>
    <string name="gallerie">Gallerie</string>
    <string name="membre">Membre</string>
    <string name="sucessedit">Modification effctue</string>
    <string name="ajouter">Ajouter</string>
    <string name="modifier">Modifier</string>
    <string name="fail_add_member">Erreur d\'insertion</string>
    <string name="errorlistloading">Erreur de chargement de la liste</string>
    <string name="liste_chargee">Liste bien chargee</string>
    <string name="info_ask">Veuillez saisir les informations demandees</string>
    <string name="sucessdel">Suppression effectue avec succes</string>
    <string name="error_del">Erreur de suppression</string>
    <string name="supprimer">Supprimer</string>
    <string name="retour">Retour</string>
    <string name="ok">OK</string>
    <string name="supprimer_image">Supprimer image</string>
    <string name="selectionner_la_date_de_cotisation">Selectionner la date de cotisation</string>

    <string-array name="presence">
        <item>Present</item>
        <item>Abs</item>
        <item>Per</item>
    </string-array>
</resources>
