<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--templateUseful: 2;6;8-->
    <!--white: 6;2;4;8;10-->
    <!--logoColor: 5;6;7?;-->
    <!--logoColor: logo:white 10;1;3;4;5;6-->
    <!--logoColor: sans logo or logoColor: 2;8logoColor;-->

    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/pres_cos_bg10"
        android:scaleType="centerCrop"/>

    <!--<TextView-->
        <!--android:id="@+id/tv_logo"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="70dp"-->
        <!--android:text="@string/logo"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="35sp"-->
        <!--android:layout_marginBottom="30dp"/>-->

    <!--<TextView-->
        <!--android:id="@+id/tv_logo"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="42dp"-->
        <!--android:text="@string/logo"-->
        <!--style="@style/CustomTextStyle"-->
        <!--android:layout_marginBottom="42dp"/>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/transparent_bg"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getstarted"
                android:textColor="@color/logo"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_id"
                android:textColor="@color/logo"
                android:textSize="12sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textColor="@color/logo"
                android:textSize="12sp"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />
            
            <AutoCompleteTextView
                android:id="@+id/group"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:hint="@string/groupename"
                android:inputType="text"
                android:background="@drawable/roundedbg"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableStart="@drawable/ic_people_black_24dp"
                android:textSize="16sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/logo"
                android:textColorHint="@color/logo"
                android:textAlignment="textStart"
                android:scrollHorizontally="true"
                tools:ignore="RtlSymmetry,SmallSp" />

            <!-- android:textStyle="bold" -->

            <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:hint="@string/username"
                android:inputType="text"
                android:background="@drawable/roundedbg"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableStart="@drawable/ic_person"
                android:textSize="16sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/logo"
                android:textColorHint="@color/logo"
                android:textAlignment="textStart"
                android:scrollHorizontally="true"
                tools:ignore="RtlSymmetry,SmallSp" />

            <AutoCompleteTextView
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:background="@drawable/roundedbg"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableStart="@drawable/ic_password"
                android:textSize="16sp"
                android:drawablePadding="5dp"
                android:paddingStart="2dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/logo"
                android:textColorHint="@color/logo"
                android:textAlignment="textStart"
                android:scrollHorizontally="true"
                tools:ignore="RtlSymmetry,SmallSp" />

            <AutoCompleteTextView
                android:id="@+id/pwdconfirm"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:hint="@string/cfpwd"
                android:inputType="textPassword"
                android:background="@drawable/roundedbg"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableStart="@drawable/ic_pwdc"
                android:textSize="16sp"
                android:drawablePadding="5dp"
                android:paddingStart="2dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/logo"
                android:textColorHint="@color/logo"
                android:textAlignment="textStart"
                android:scrollHorizontally="true"
                tools:ignore="RtlSymmetry,SmallSp" />
            
            <Button
                android:id="@+id/registervalidate"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/valider"
                android:textColor="@color/white"
                android:textStyle="normal"
                android:layout_gravity="center"
                android:background="@drawable/valider_bg"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:onClick="valider"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>